--- a/src/application/ui/Admin.fxml
+++ b/src/application/ui/Admin.fxml
@@ -77,27 +77,27 @@
                     <Label text="Title" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <Label text="ISBN" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <Label text="Borrow Duration" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                    <ChoiceBox prefHeight="26.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                      <items>
-                        <FXCollections fx:factory="observableArrayList">
-                          <String fx:value="Item 1" />
-                          <String fx:value="Item 2" />
-                          <String fx:value="Item 3" />
-                        </FXCollections>
-                      </items>
-                    </ChoiceBox>
                     <Label text="Availability" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                    <ChoiceBox minHeight="17.999908447265625" prefHeight="26.0" prefWidth="146.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                      <items>
-                        <FXCollections fx:factory="observableArrayList">
-                          <String fx:value="Item 1" />
-                          <String fx:value="Item 2" />
-                          <String fx:value="Item 3" />
-                        </FXCollections>
-                      </items>
-                    </ChoiceBox>
                     <TextField prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                     <TextField prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <ComboBox fx:id="cb" minHeight="15.999908447265625" prefHeight="25.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                      <items>
+                        <FXCollections fx:factory="observableArrayList">
+                          <String fx:value="Item 1" />
+                          <String fx:value="Item 2" />
+                          <String fx:value="Item 3" />
+                        </FXCollections>
+                      </items>
+                    </ComboBox>
+                    <ComboBox fx:id="cb2" prefHeight="25.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                      <items>
+                        <FXCollections fx:factory="observableArrayList">
+                          <String fx:value="Item 1" />
+                          <String fx:value="Item 2" />
+                          <String fx:value="Item 3" />
+                        </FXCollections>
+                      </items>
+                    </ComboBox>
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
