--- a/src/application/ui/Admin.fxml
+++ b/src/application/ui/Admin.fxml
@@ -72,14 +72,14 @@
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="352.0" prefWidth="473.0">
               <children>
-                <GridPane layoutX="43.0" layoutY="88.0" prefHeight="161.0" prefWidth="318.0">
+                <GridPane layoutX="43.0" layoutY="88.0" prefHeight="161.0" prefWidth="280.0">
                   <children>
                     <Label text="Title" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <Label text="ISBN" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <Label text="Borrow Duration" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                     <Label text="Availability" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                    <TextField prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                    <TextField prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <TextField fx:id="title" prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="isbn" prefHeight="36.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     <ComboBox fx:id="cb" minHeight="15.999908447265625" prefHeight="25.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                       <items>
                         <FXCollections fx:factory="observableArrayList">
@@ -100,6 +100,31 @@
                     </ComboBox>
                   </children>
                   <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" minWidth="10.0" prefWidth="180.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                </GridPane>
+                <Button layoutX="195.0" layoutY="370.0" mnemonicParsing="false" onMouseClicked="#addBookHandle" prefHeight="38.0" prefWidth="95.0" text="Submit" />
+                <Label layoutX="117.0" layoutY="54.0" text="Book Info" />
+                <Label layoutX="431.0" layoutY="57.0" text="Author Info" />
+                <GridPane layoutX="362.0" layoutY="221.0">
+                  <children>
+                    <Label text="Street Number" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <Label text="City" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <Label text="Zip Code" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <Label text="State" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                    <TextField fx:id="streetNum2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="city2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <TextField fx:id="zip2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <TextField fx:id="state2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  </children>
+                  <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   </columnConstraints>
@@ -110,7 +135,37 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                 </GridPane>
-                <Button layoutX="228.0" layoutY="311.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="95.0" text="Submit" />
+                <GridPane layoutX="376.0" layoutY="99.0">
+                  <children>
+                    <Label text="First Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <Label text="Last Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <Label text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <TextField fx:id="fname2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="lname2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <TextField fx:id="phoneNum2" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  </children>
+                  <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                </GridPane>
+                <Label layoutX="362.0" layoutY="354.0" text="Credential" />
+                <ComboBox fx:id="cb3" layoutX="462.0" layoutY="352.0" prefHeight="21.0" prefWidth="100.0">
+                  <items>
+                    <FXCollections fx:factory="observableArrayList">
+                      <String fx:value="Item 1" />
+                      <String fx:value="Item 2" />
+                      <String fx:value="Item 3" />
+                    </FXCollections>
+                  </items>
+                </ComboBox>
+                <Label layoutX="362.0" layoutY="389.0" text="Bio" />
+                <TextField fx:id="bio" layoutX="427.0" layoutY="386.0" prefWidth="159.0" />
               </children>
             </AnchorPane>
           </content>
