--- a/bin/application/ui/Admin.fxml
+++ b/bin/application/ui/Admin.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane onMouseClicked="#handleSubmit" prefHeight="650.0" prefWidth="900.0" style="-fx-border-color: #efebe6; -fx-border-width: 5px;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ui.AdminController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#handleSubmit" prefHeight="650.0" prefWidth="900.0" style="-fx-border-color: #efebe6; -fx-border-width: 5px;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ui.AdminController">
   <!-- TODO Add Nodes -->
   <children>
     <TabPane layoutX="20.0" layoutY="145.0" prefHeight="507.0" prefWidth="870.0" style="-fx-border-color: orange; -fx-border-width: 3px;;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="140.0">
@@ -19,13 +19,13 @@
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="436.0" prefWidth="864.0">
               <children>
-                <Label layoutX="190.0" layoutY="4.0" prefHeight="31.0" prefWidth="136.0" text="Search for a book">
+                <Label layoutX="244.0" layoutY="15.0" prefHeight="31.0" prefWidth="136.0" text="Search for a book">
                   <font>
                     <Font name="System Bold" size="14.0" />
                   </font>
                 </Label>
-                <TextField fx:id="searchField" layoutX="338.0" layoutY="6.0" onAction="#searchBookHandle" prefHeight="31.0" prefWidth="215.0" promptText="ISBN Number" />
-                        <GridPane layoutX="108.0" layoutY="53.0" prefHeight="315.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-border-radius: 8px;">
+                <TextField fx:id="searchField" layoutX="392.0" layoutY="17.0" onAction="#searchBookHandle" prefHeight="31.0" prefWidth="215.0" promptText="ISBN Number" />
+                        <GridPane layoutX="143.0" layoutY="65.0" prefHeight="315.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-border-radius: 8px;">
                            <children>
                               <Label text="Title" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label text="ISBN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -50,7 +50,6 @@
                               <TextField fx:id="zip21" maxHeight="26.0" maxWidth="140.0" minHeight="26.0" minWidth="140.0" prefHeight="26.0" prefWidth="140.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
                               <TextField fx:id="state21" maxHeight="26.0" maxWidth="140.0" minHeight="26.0" minWidth="140.0" prefHeight="26.0" prefWidth="140.0" GridPane.columnIndex="5" GridPane.rowIndex="7" />
                               <Label text="Credential" GridPane.columnIndex="4" GridPane.rowIndex="9" />
-                              <Button mnemonicParsing="false" onAction="#clearSearchBookForm" onMouseClicked="#addBookHandle" prefHeight="38.0" prefWidth="139.0" style="-fx-border-color: red;" text="CLEAR" textFill="#112519" GridPane.columnIndex="2" GridPane.rowIndex="9" />
                               <TextField fx:id="bio1" maxHeight="26.0" maxWidth="140.0" minHeight="26.0" minWidth="140.0" prefHeight="26.0" prefWidth="140.0" GridPane.columnIndex="5" GridPane.rowIndex="8" />
                               <Label text="Bio" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                               <Label text="Book Info" GridPane.columnIndex="1">
@@ -66,6 +65,7 @@
                               <TextField fx:id="bDuration" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                               <TextField fx:id="bAvailability" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                               <TextField fx:id="cr21" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+                              <Button mnemonicParsing="false" onAction="#clearSearchBookForm" prefHeight="32.0" prefWidth="138.0" text="CLEAR" textFill="#bc0c0c" GridPane.columnIndex="2" GridPane.rowIndex="9" />
                            </children>
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="22.152313232421875" />
@@ -192,7 +192,7 @@
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
               <children>
-                <GridPane layoutX="144.0" layoutY="91.0" prefHeight="271.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-background-radius: 8px;">
+                <GridPane layoutX="144.0" layoutY="97.0" prefHeight="271.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-background-radius: 8px;">
                   <children>
                     <Label text="First Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     <Label text="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -244,34 +244,61 @@
             </AnchorPane>
           </content>
         </Tab>
-        <Tab text="View Member Info">
+        <Tab text="Edit Member Info">
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
               <children>
-                <TableView layoutX="59.0" layoutY="121.0" prefHeight="241.0" prefWidth="298.0">
-                  <columns>
-                    <TableColumn prefWidth="75.0" text="First Name" />
-                    <TableColumn prefWidth="75.0" text="Last Name" />
-                    <TableColumn prefWidth="75.0" text="Street" />
-                  </columns>
-                </TableView>
-                <TextField layoutX="93.0" layoutY="47.0" prefHeight="30.0" prefWidth="200.00009999999747" />
-                <Label layoutX="38.0" layoutY="47.0" prefHeight="30.0" prefWidth="42.0" text="Search" />
-              </children>
-            </AnchorPane>
-          </content>
-        </Tab>
-        <Tab text="View Book Info">
-          <content>
-            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-              <children>
-                <Label layoutX="39.0" layoutY="57.0" prefHeight="31.0" prefWidth="133.0" text="Enter Member ID">
-                  <font>
-                    <Font name="System Bold" size="14.0" />
-                  </font>
-                </Label>
-                <TextField id="memid" fx:id="st" layoutX="172.0" layoutY="52.0" prefHeight="41.0" prefWidth="215.0" />
-                <Button fx:id="sm" layoutX="199.0" layoutY="122.0" mnemonicParsing="false" onMouseClicked="#searchHandle" prefHeight="31.0" prefWidth="85.0" text="Search" />
+                <TextField fx:id="memberSearchTf" layoutX="421.0" layoutY="26.0" onAction="#memberSearchHandle" prefHeight="36.0" prefWidth="201.0" promptText="Any Member Personal Detail" style="-fx-border-color: red;" />
+                <Label layoutX="229.0" layoutY="26.0" prefHeight="30.0" prefWidth="178.0" text="Search for a library Memebr" />
+                        <Label layoutX="244.0" layoutY="74.0" text="Edit Member Details Form">
+                           <font>
+                              <Font size="31.0" />
+                           </font>
+                        </Label>
+                        <GridPane layoutX="133.0" layoutY="126.0" prefHeight="271.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-background-radius: 8px;">
+                           <children>
+                              <Label text="First Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label text="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label text="Street Number" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <Label text="City" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                              <Label text="Zip Code" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <Label text="State" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                              <TextField fx:id="streetNum1" prefHeight="35.0" prefWidth="135.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                              <TextField fx:id="city1" prefHeight="35.0" prefWidth="133.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                              <TextField fx:id="zip1" prefHeight="35.0" prefWidth="133.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                              <TextField fx:id="state1" prefHeight="35.0" prefWidth="130.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                              <TextField fx:id="phoneNum1" prefHeight="35.0" prefWidth="135.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                              <TextField fx:id="lname1" prefHeight="35.0" prefWidth="135.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                              <TextField fx:id="fname1" prefHeight="35.0" prefWidth="135.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Label text="Personal Details" GridPane.columnIndex="1">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" fx:id="x11" />
+                                 </font>
+                              </Label>
+                              <Label font="$x11" text="Address" GridPane.columnIndex="4" />
+                              <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="152.0" style="-fx-border-color: #2aab42;" text="EDIT" textFill="#2aab42" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="152.0" style="-fx-border-color: #d03838;" text="CANCEL" textFill="#d03838" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.0" minWidth="10.0" prefWidth="30.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="109.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="31.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="94.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="10.0" prefWidth="39.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="45.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="86.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="41.0" minHeight="8.0" prefHeight="10.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
               </children>
             </AnchorPane>
           </content>
@@ -283,7 +310,7 @@
             <Reflection />
          </effect>
       </Label>
-      <ImageView fitHeight="114.0" fitWidth="365.0" layoutX="274.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="114.0" fitWidth="362.0" layoutX="287.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="287.0" AnchorPane.rightAnchor="287.0">
          <image>
             <Image url="@../images/logo.png" />
          </image>
