--- a/bin/application/ui/Admin.fxml
+++ b/bin/application/ui/Admin.fxml
@@ -57,7 +57,9 @@
                     <TextField fx:id="bDuration" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                     <TextField fx:id="bAvailability" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                     <TextField fx:id="cr21" GridPane.columnIndex="5" GridPane.rowIndex="9" />
-                    <Button mnemonicParsing="false" onAction="#clearSearchBookForm" prefHeight="32.0" prefWidth="138.0" text="CLEAR" textFill="#bc0c0c" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+                    <Button mnemonicParsing="false" onAction="#clearSearchBookForm" prefHeight="32.0" prefWidth="138.0" style="-fx-border-color: red;" text="CLEAR" textFill="#bc0c0c" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+                              <TextField fx:id="bookCopiesAvailable" maxHeight="26.0" maxWidth="140.0" minHeight="26.0" minWidth="140.0" prefHeight="26.0" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                              <Label text="Copies Available" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="22.152313232421875" />
@@ -243,7 +245,7 @@
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
               <children>
-                <TextField fx:id="memberSearchTf" layoutX="421.0" layoutY="26.0" onAction="#memberSearchHandle" prefHeight="36.0" prefWidth="201.0" promptText="Any Member Personal Detail" style="-fx-border-color: red;" />
+                <TextField fx:id="memberSearchTf" layoutX="421.0" layoutY="26.0" prefHeight="36.0" prefWidth="201.0" promptText="Any Member Personal Detail" style="-fx-border-color: red;" />
                 <Label layoutX="229.0" layoutY="26.0" prefHeight="30.0" prefWidth="178.0" text="Search for a library Memebr" />
                 <Label font="$x2" layoutX="244.0" layoutY="74.0" text="Edit Member Details Form" />
                 <GridPane layoutX="133.0" layoutY="126.0" prefHeight="271.0" prefWidth="581.0" style="-fx-background-color: #dddad7; -fx-background-radius: 8px;">
